// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Li checkGrammar=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li checkGrammar=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li checkHighlight=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li checkHighlight=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li checkSpaces=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li checkSpaces=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li className="my-classname" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li my-classname"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li className="test-classname" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li test-classname"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li content="This is Content from ContentMixin" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    >
      <UU5.Common.TextCorrectorContextConsumer
        key="0"
        text="This is Content from ContentMixin"
      />
    </span>
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li content=12345 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    >
      12345
    </span>
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li controlled=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li controlled=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li default props 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li disabled=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li disabled=false 3`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li disabled=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li uu5-common-disabled"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li disabled=true 3`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li uu5-common-disabled"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li docKit examples UU5.Bricks.Li should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Ul
    id="uuID02"
    key="uuID02"
  >
    <Li
      content="Buy milk"
      id="uuID03"
    />
    <Li
      content="Pay taxes"
      id="uuID04"
    />
    <Li
      content="Establish world peace"
      id="uuID05"
    />
    <Li
      content="Play pc games"
      id="uuID06"
    />
  </Ul>
</div>
`;

exports[`UU5.Bricks.Li dynamic=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li dynamic=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li fullTextSearchPriority=0 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li uu-fulltextsearch-0"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li fullTextSearchPriority=0 2`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li uu-fulltextsearch-0"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li hidden=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li hidden=false 3`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li hidden=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li uu5-common-hidden"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li hidden=true 3`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li uu5-common-hidden"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li id="myId" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="myId"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li id="test-id" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="test-id"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li ignoreHTML=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li ignoreHTML=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li mainAttrs=undefined 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li name="myName" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="bigBox" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="bigBoxCollection" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="box" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="box" 3`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="boxCollection" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="inline" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="inline" 3`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="page" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="smallBox" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="smallBoxCollection" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li nestingLevel="spa" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li noPrint=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li noPrint=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li pureRender=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li pureRender=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li selected=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li selected=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li uu5-common-selected"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li style="padding:8px; borderRadius: 2px" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li style={"backgroundColor":"red","color":"blue"} 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li style={"margin":8} 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={
      Object {
        "margin": 8,
      }
    }
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li textCorrector=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li textCorrector=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;

exports[`UU5.Bricks.Li tooltip="My Tooltip" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": undefined,
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": undefined,
    }
  }
>
  <li
    className="uu-bricks-y4d1ve uu5-bricks-li"
    id="uuID"
    style={Object {}}
    title="My Tooltip"
  >
    <span
      className="uu-bricks-j5rkb3"
    />
  </li>
</ContextProvider>
`;
